src/main/java/com/example/comus/global/error/exception/UnauthorizedException.java
package com.example.comus.global.error.exception;

import com.example.comus.global.error.ErrorCode;

public class UnauthorizedException extends BusinessException {
    public UnauthorizedException() {
        super(ErrorCode.UNAUTHORIZED);
    }

    public UnauthorizedException(ErrorCode errorCode) {
        super(errorCode);
    }
}